Fix Field gap

--- a/src/components/Field/index.css
+++ b/src/components/Field/index.css
@@ -2,7 +2,7 @@
 
 /** @define Field; */
 
-.Field-children {
+.Field {
   &:not(:first-child) {
     margin-top: 1rem;
   }
